Feature social provider (#12)
Social providers
