# internal/handler/http/constructor.go
@@ -1,7 +1,13 @@
 package http
 
 import (
+	"context"
+
+	administrator "github.com/nori-plugins/authentication/internal/handler/http/administator"
+
 	"github.com/nori-io/interfaces/nori/http"
+	"github.com/nori-plugins/authentication/internal/domain/helper/goth_provider"
+	"github.com/nori-plugins/authentication/internal/domain/service"
 	"github.com/nori-plugins/authentication/internal/handler/http/authentication"
 	"github.com/nori-plugins/authentication/internal/handler/http/mfa_recovery_code"
 	"github.com/nori-plugins/authentication/internal/handler/http/mfa_secret"
@@ -11,31 +17,46 @@ import (
 
 type Handler struct {
 	R                      http.Http
+	AdminHandler           *administrator.AdminHandler
 	AuthenticationHandler  *authentication.AuthenticationHandler
 	MfaRecoveryCodeHandler *mfa_recovery_code.MfaRecoveryCodeHandler
 	MfaSecretHandler       *mfa_secret.MfaSecretHandler
 	SettingsHandler        *settings.SettingsHandler
 	SocialProviderHandler  *social_provider.SocialProviderHandler
+	GothProviderHelper     goth_provider.GothProviderHelper
+	SocialProviderService  service.SocialProvider
 }
 
 type Params struct {
 	R                      http.Http
+	AdminHandler           *administrator.AdminHandler
 	AuthenticationHandler  *authentication.AuthenticationHandler
 	MfaRecoveryCodeHandler *mfa_recovery_code.MfaRecoveryCodeHandler
 	MfaSecretHandler       *mfa_secret.MfaSecretHandler
 	SettingsHandler        *settings.SettingsHandler
 	SocialProviderHandler  *social_provider.SocialProviderHandler
+	GothProviderHelper     goth_provider.GothProviderHelper
+	SocialProviderService  service.SocialProvider
 }
 
 func New(params Params) *Handler {
 	handler := Handler{
 		R:                      params.R,
+		AdminHandler:           params.AdminHandler,
 		AuthenticationHandler:  params.AuthenticationHandler,
 		MfaRecoveryCodeHandler: params.MfaRecoveryCodeHandler,
 		MfaSecretHandler:       params.MfaSecretHandler,
 		SettingsHandler:        params.SettingsHandler,
 		SocialProviderHandler:  params.SocialProviderHandler,
+		GothProviderHelper:     params.GothProviderHelper,
+		SocialProviderService:  params.SocialProviderService,
 	}
+
+	providers, err := handler.SocialProviderService.GetAllActive(context.Background())
+	if err != nil {
+		return nil
+	}
+	handler.GothProviderHelper.UseAll(providers)
 
 	// todo: add middleware
 	handler.R.Post("/auth/signup", handler.AuthenticationHandler.SignUp)
@@ -44,6 +65,13 @@ func New(params Params) *Handler {
 	handler.R.Get("/auth/signout", handler.AuthenticationHandler.SignOut)
 	handler.R.Get("/auth/session", handler.AuthenticationHandler.Session)
 	handler.R.Get("/auth/settings/mfa/recovery_codes", handler.MfaRecoveryCodeHandler.GetMfaRecoveryCodes)
+	handler.R.Post("/auth/settings/password", handler.SettingsHandler.ChangePassword)
+	handler.R.Get("/auth/settings/mfa", handler.SettingsHandler.ReceiveMfaStatus)
 	handler.R.Get("/auth/social_providers", handler.SocialProviderHandler.GetSocialProviders)
+	handler.R.Get("/auth/social/{social_provider}", handler.AuthenticationHandler.HandleSocialProvider)
+	handler.R.Post("/auth/social/{social_provider}/callback", handler.AuthenticationHandler.HandleSocialProviderCallBack)
+	handler.R.Get("/auth/social/{social_provider}/logout", handler.AuthenticationHandler.HandleSocialProviderLogout)
+	handler.R.Get("/admin/users", handler.AdminHandler.GetAllUsers)
+	handler.R.Get("/admin/users/{id}", handler.AdminHandler.GetUserById)
 	return &handler
 }
